--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-  background-color: #5f4c40;
-  color: #f0e6d2;
+  background-color: #faf9f6;
+  color: #4a4a4a;
   font-family: "Ubuntu", serif;
 }
 section {
@@ -13,9 +13,9 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #5f4c40;
+  background-color: #faf9f6;
   padding: 5px 10px;
-  color: #f0e6d2;
+  color: #4a4a4a;
 }
 
 .logo a {
@@ -31,24 +31,18 @@ nav {
 }
 .nav-items a {
   text-decoration: none;
-  color: #f0e6d2;
+  color: #4a4a4a;
   font-size: 1rem;
   transition: color 0.3s ease;
   padding-left: 15px;
 }
 
 .nav-items a:hover {
-  color: #a38673;
+  color: #f0efec;
 }
 /* about-me section */
 #aboutme {
   display: flex;
-}
-
-#aboutme h2 {
-  max-width: 70%;
-  margin-top: 40px;
-  margin-bottom: auto;
 }
 
 #aboutme p {
