--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav {
   color: #440a0ae5;
 }
 
-.container {
+#aboutme {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -64,9 +64,7 @@ nav {
   background-attachment: relative;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 100vh;
   padding: 40px;
-
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -154,7 +152,7 @@ nav {
 /* my-services section */
 #my-services {
   padding: 50px 20px;
-  margin-bottom: -30px;
+  margin-bottom: -50px;
   line-height: 1.5;
 }
 
@@ -194,6 +192,50 @@ nav {
   transform: translateY(-5px);
   background: linear-gradient(to right, #ffe66d, #ff6f61);
   color: #ffffff;
+}
+
+/* skills section */
+#skills {
+  text-align: center;
+  padding: 50px 20px;
+  background: linear-gradient(to right, #f4f4f9, #ffffff);
+  width: 100%;
+  height: 100vh;
+  margin-top: 40px;
+}
+
+.skills-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 20px;
+  max-width: 900px;
+  margin: auto;
+  gr
+}
+
+.skill {
+  background: #ffffff; /* White card background */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.skill:hover {
+  transform: translateY(-5px);
+  background: linear-gradient(to right, #ffe66d, #ff6f61); /* Gradient hover */
+  color: white;
+}
+
+.skill i {
+  font-size: 40px;
+  margin-bottom: 10px;
+  color: #333;
+  transition: color 0.3s;
+}
+
+.skill:hover i {
+  color: white;
 }
 
 /* Call to Action */
