--- a/about.css
+++ b/about.css
@@ -281,9 +281,19 @@ a:hover {
 }
 
 .section-title {
-  color: #ffc107;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: bold;
+  margin-bottom: 20px;
+  position: relative;
+  display: inline-block;
+}
+.section-title::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 3px;
+  background-color: #ffc107;
+  margin: 5px auto 0;
 }
 
 .section-description {
@@ -370,7 +380,7 @@ a:hover {
 /* Hide Text Initially */
 .sidebar a span {
   position: absolute;
-  right: 60px;
+  right: 50px;
   white-space: nowrap;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
